7403 G4P Legg til lagring av sed ved tredjelandsborger (#740)
Lagrer SED-en om ikke journalføres, og behandling ikke opprettes i Melosys. Da kan vi kan gjøre en ekstra kontroll på at dette er riktig. Og det er mulighet til å re-kjøre dette, om det viser seg og vi stoppet ved en feil.